[package]
name = "rust-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#log = "0.4.17"
#custom-utils = "0.10.14"
rumqttd = "0.17.0"
config = "0.13"
tracing-subscriber = { version="0.3.16", features=["env-filter"] }
tracing = { version="0.1", features=["log"] }
